--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="button_plus">+</string>
 
     <string name="error_message">ERROR</string>
+    <string name="overflow_message">INT OVERFLOW</string>
 </resources>
